public interface IBaseEventPayload
{
}

